RESOLVED FIXED294963
Show safe browsing warnings that are received after timeout
https://bugs.webkit.org/show_bug.cgi?id=294963
Summary Show safe browsing warnings that are received after timeout
pascoe@apple.com
Reported 2025-06-25 01:28:31 PDT
In some cases, the daemon can be slow to respond to safe browsing warning requests like when it is starting up. We should show the warning even after a timeout.
Attachments
pascoe@apple.com
Comment 1 2025-06-25 01:29:34 PDT
pascoe@apple.com
Comment 2 2025-06-25 01:33:17 PDT
EWS
Comment 3 2025-06-26 14:06:30 PDT
Committed 296682@main (e8735879f11d): <https://commits.webkit.org/296682@main> Reviewed commits have been landed. Closing PR #47176 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.