Show safe browsing warnings that are received after timeout rdar://153254680 https://bugs.webkit.org/show_bug.cgi?id=294963

Reviewed by Matthew Finkel.

Sometimes the safe browsing daemon can be slow to respond, like
when it is starting up. We should show the browsing warning even
if we get it after a timeout.

Added API test to exercise behavior.

* Source/WebKit/UIProcess/API/APINavigation.h:
(API::Navigation::setSafeBrowsingCheckTimedOut):
(API::Navigation::safeBrowsingCheckTimedOut):
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::beginSafeBrowsingCheck):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForResponseShared):
(WebKit::WebPageProxy::showBrowsingWarning):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:
(TEST(SafeBrowsing, PostTimeout)):

Canonical link: https://commits.webkit.org/296682@main